# AlbedoUtils

./: .gitignore  CMakeLists.txt  README.md
include/: AlbedoPattern.hpp  AlbedoTime.hpp  CMakeLists.txt
